<resources>
    <!--Strings for all activities-->
    <string name="app_name">FuelCost</string>
    <string name="app_name_full" translatable="false">Fuel Cost Calculator</string>
    <string name="newCar">new Car</string>
    <string name="settings">settings</string>
    <string name="home">home</string>

    <!--Strings for main activity-->
    <string name="app_full_name">Fuel cost calculator</string>
    <string name="add_a_car">Add a car</string>
    <string name="car_make_name">car make/name</string>
    <string name="total_fuel_cost">total fuel cost</string>
    <string name="dont_know_cost">Don\'t know cost?</string>
    <string name="average_fuel_consumption">average fuel consumption</string>
    <string name="price_of_fuel_liter">price of fuel liter</string>
    <string name="addCar">+ Add car</string>
    <string name="deleteCar">- Delete last</string>
    <string name="carName">Car name</string>
    <string name="fuelCost">Fuel cost</string>


    <!--Toast messages and communication with user on main activity-->
    <string name="provide_car_name">Provide car name!</string>
    <string name="no_data">No data</string>
    <string name="provide_average_consumption">Provide average consumption!</string>
    <string name="provide_price_of_fuel_liter">Provide price per liter!</string>
    <string name="provide_correct_fuel_consumption">Provide correct average consumption!</string>
    <string name="provide_correct_price_of_fuel_liter">Provide correct price of fuel liter!</string>
    <string name="provide_total_cost">Provide total cost!</string>
    <string name="car">Car</string>
    <string name="car_removed">Car removed!</string>
    <string name="notSetYet">Not calculated yet!</string>
    <string name="addAtLeastOneCar">Add at least one car!</string>
    <string name="numberMustBePositive">Number must be higher than zero!</string>


    <!--Strings for add distances activity-->
    <string name="distances">Distances</string>
    <string name="distance_name">distance name</string>
    <string name="distance">distance</string>
    <string name="add_distance">+ ADD DISTANCE</string>
    <string name="delete_last_distance">- DELETE LAST</string>
    <string name="carList">Cars</string>
    <string name="nothing">nothing</string>

    <!--Toast messages and communication with user on add distances activity-->
    <string name="provide_distance_name">Provide distance name!</string>
    <string name="provide_distance">Provide distance!</string>
    <string name="added">added!</string>
    <string name="nothing_to_delete">Nothing to delete!</string>
    <string name="distance_removed">Distance removed!</string>
    <string name="first_add_at_least_one_distance">First add at least one distance!</string>
    <string name="chooseCarsFor">Choose cars for </string>

    <!--Strings for add passengers activity-->
    <string name="passengers">Passengers</string>
    <string name="passenger_name">passenger name</string>
    <string name="add_passenger">+ ADD PASSENGER</string>
    <string name="delete_last">- DELETE LAST</string>
    <string name="list_Of_Distances">List of distances</string>

    <!--Toast messages and communication with user on add add passengers activity-->
    <string name="provide_passenger_name">Provide passenger name!</string>
    <string name="choose_distances_for">Choose distances for</string>
    <string name="Ok">OK</string>
    <string name="passenger_removed">Passenger removed</string>
    <string name="first_add_at_least_one_passenger">First add at least one passenger!</string>
    <string name="error_when_calculating_fuel_cost">Error when calculating fuel cost</string>

    <!--Strings for payments activity-->
    <string name="fuelPayments">Fuel payments</string>
    <string name="howMuchYouPaid">How much you paid?</string>
    <string name="addPayment">+ Add payment</string>
    <string name="payerName">Payer Name</string>
    <string name="payment">Payments</string>
    <string name="choosePayer">Who paid?</string>
    <string name="forWhatCar">For what car?</string>
    <string name="price">price:</string>
    <string name="partialPayment">partial/multiple payments:</string>

    <!--Toast messages and communication with user on payments activity-->
    <string name="providePayment">Provide payment</string>
    <string name="fuelCostsAreNotEqual">Total fuel cost is not equal to what passengers paid</string>
    <string name="paymentRemoved">Payment removed</string>


    <!--Strings for results activity-->
    <string name="table_of_costs">Table of costs</string>
    <string name="cost">how much</string>
    <string name="whoToWireMoney">to whom</string>
    <string name="who">Who</string>

    <!--Strings for settings activity-->
    <string name="appTheme">App theme</string>
    <string name="appLanguage">App language</string>
    <string name="website">Website</string>
    <string name="appVersion">App version</string>
    <string name="appSettings">Settings</string>
    <string name="other">Other</string>
    <string name="clickToOpenMyWebsite">Click to open my website</string>

    <!--Strings for dark_mode_entries-->
    <string name="systemPreferences">System preferences</string>
    <string name="darkMode">Dark mode</string>
    <string name="lightMode">Light mode</string>
    <string name="AutoBattery">Auto Battery Dark Mode</string>

    <!--Strings for language_entries-->
    <string name="english">english</string>
    <string name="polish">polish</string>
</resources>